--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Simple console text editor",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint src --max-warnings 0",
+    "eslint": "eslint src --max-warnings 0",
+    "flow": "flow",
     "build": "babel src/ -d dist/",
     "start": "npm run build && node dist/index.js",
-    "test": "npm run lint"
+    "test": "npm run lint && npm run flow"
   },
   "keywords": [
     "console",
@@ -15,13 +16,15 @@
   ],
   "author": "Bannerets <save14@protonmail.com>",
   "license": "MIT",
+  "preferGlobal": true,
   "dependencies": {
     "commander": "^2.11.0",
-    "fs-extra": "^4.0.2"
+    "keypress": "^0.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
     "eslint": "^4.9.0",
