--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "preferGlobal": true,
   "dependencies": {
     "commander": "^2.11.0",
+    "fs-extra": "^4.0.2",
     "keypress": "^0.2.1"
   },
   "devDependencies": {
