--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "commander": "^2.11.0",
     "fs-extra": "^4.0.2",
-    "keypress": "^0.2.1"
+    "keypress": "^0.2.1",
+    "persist-path": "^1.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
