--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,115 +5,20 @@
     "node": true,
     "es6": true
   },
-  "parserOptions": {
-    "ecmaVersion": 8,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true
-    }
-  },
   "extends": [
+    "standard",
     "plugin:flowtype/recommended"
   ],
   "plugins": [
     "flowtype",
     "async-await"
   ],
-  "settings": {
-   "flowtype": {
-     "onlyFilesWithFlowAnnotation": true
-   }
- },
   "rules": {
     "async-await/space-after-async": 1,
     "async-await/space-after-await": 1,
-    "require-await": 1,
-    "valid-jsdoc": 1,
-    "no-redeclare": 2,
-    "yoda": [1,"never",{"exceptRange":false,"onlyEquality":true}],
-    "no-delete-var": 2,
-    "no-label-var": 1,
-    "no-undefined": 1,
-    "no-use-before-define": [2, {"functions":false,"classes":false}],
-    "comma-spacing": [1,{"before":false,"after":true}],
-    "key-spacing": [1,{"afterColon":true}],
-    "new-cap": 1,
-    "no-nested-ternary": 1,
-    "comma-dangle": [1,"never"],
-    "no-constant-condition": [2,{"checkLoops":false}],
-    "no-debugger": 1,
-    "no-dupe-args": 2,
-    "no-dupe-keys": 2,
-    "no-duplicate-case": 2,
-    "no-empty-character-class": 2,
-    "no-empty": 1,
-    "no-ex-assign": 2,
-    "no-extra-boolean-cast": 2,
-    "no-extra-semi": 2,
-    "no-func-assign": 2,
-    "no-irregular-whitespace": 2,
-    "no-negated-in-lhs": 2,
-    "no-obj-calls": 2,
-    "no-regex-spaces": 1,
-    "no-sparse-arrays": 2,
-    "no-unreachable": 1,
-    "use-isnan": 2,
-    "valid-typeof": 2,
-    "no-unexpected-multiline": 2,
-    "dot-notation": [1,{"allowKeywords":true}],
-    "eqeqeq": [1,"allow-null"],
-    "no-caller": 2,
-    "no-else-return": 1,
-    "no-loop-func": 1,
-    "no-octal": 2,
-    "no-throw-literal": 1,
-    "no-unused-vars": 1,
-    "no-new-require": 2,
-    "no-path-concat": 1,
-    "brace-style": [1,"1tbs",{}],
-    "computed-property-spacing": [1,"never"],
-    "eol-last": 1,
-    "indent": [1,2],
-    "no-lonely-if": 1,
-    "no-mixed-spaces-and-tabs": [1,"smart-tabs"],
-    "no-unneeded-ternary": 1,
-    "operator-assignment": [1,"always"],
-    "semi-spacing": [1,{"after":true}],
-    "semi": [1,"never"],
-    "space-before-blocks": [1,"always"],
-    "space-before-function-paren": 1,
-    "arrow-parens": [1,"as-needed"],
-    "arrow-spacing": [1,{"before":true,"after":true}],
-    "constructor-super": 2,
-    "no-class-assign": 2,
-    "no-const-assign": 2,
-    "object-shorthand": [1,"methods"],
-    "prefer-spread": 1,
-    "no-inner-declarations": 1,
-    "no-new-func": 2,
-    "no-new-symbol": 2,
-    "no-tabs": 1,
-    "no-this-before-super": 2,
-    "no-unsafe-negation": 2,
-    "no-useless-call": 1,
-    "no-useless-computed-key": 1,
-    "no-useless-constructor": 1,
-    "no-useless-escape": 1,
-    "no-useless-rename": 1,
-    "no-with": 2,
-    "object-property-newline": [1,{"allowMultiplePropertiesPerLine":true}],
-    "rest-spread-spacing": 1,
-    "space-in-parens": 1,
-    "space-unary-ops": 1,
-    "template-curly-spacing": 1,
-    "new-parens": 1,
-    "dot-location": [1,"property"],
-    "func-call-spacing": 1,
-    "block-spacing": 1,
-    "one-var": [1,"never"],
-    "handle-callback-err": 2,
-    "keyword-spacing": 1,
-    "quotes": [1,"single"],
-    "prefer-const": [1,{"destructuring":"all"}]
+    "spaced-comment": 0,
+    "no-fallthrough": 0,
+    "padded-blocks": 0,
+    "space-infix-ops": 0
   }
 }
