--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
-    "eslint": "^4.9.0",
+    "eslint": "^4.10.0",
+    "eslint-config-standard": "^10.2.1",
     "eslint-plugin-async-await": "0.0.0",
     "eslint-plugin-flowtype": "^2.39.1",
     "flow-bin": "^0.57.3",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "standard": "^10.0.3"
   },
   "author": "Bannerets <save14@protonmail.com>",
   "license": "MIT",
