--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "npm run build && node dist",
     "mocha": "mocha test/EditorFs",
     "test": "npm run eslint && npm run flow && npm run build && npm run mocha",
+    "postinstall": "flow-typed update && npm run build",
     "prepublish": "npm test"
   },
   "engines": {
@@ -40,6 +41,7 @@
     "eslint-plugin-async-await": "0.0.0",
     "eslint-plugin-flowtype": "^2.39.1",
     "flow-bin": "^0.57.3",
+    "flow-typed": "^2.2.1",
     "mocha": "^4.0.1",
     "standard": "^10.0.3"
   },
