--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "npm run build && node dist",
     "mocha": "mocha test/EditorFs",
     "test": "npm run eslint && npm run flow && npm run build && npm run mocha",
-    "postinstall": "flow-typed update && npm run build",
-    "prepublish": "npm test"
+    "prepublish": "flow-typed update && npm test"
   },
   "engines": {
     "node": ">=6.0.0"
