--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "flow-bin": "^0.57.3",
     "flow-typed": "^2.2.1",
     "mocha": "^4.0.1"
