--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mocha": "mocha test/EditorFs",
     "test": "npm run eslint && npm run flow && npm run build && npm run mocha",
     "prepublish": "flow-typed update",
-    "prepublishOnly": "npm test"
+    "prepublishOnly": "npm test",
+    "precommit": "npm test"
   },
   "engines": {
     "node": ">=6.5.0"
@@ -46,6 +47,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "flow-bin": "^0.57.3",
     "flow-typed": "^2.2.1",
+    "husky": "^0.14.3",
     "mocha": "^4.0.1"
   },
   "author": "Bannerets <save14@protonmail.com>",
